[package]
name = "asteroid"
version = "0.1.0"
authors = ["Ryan.K <ryankung@ieee.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
swc = { git="https://github.com/swc-project/swc.git", tag="v1.2.1"}
