[package]
name = "asteroid"
version = "0.1.0"
authors = ["Ryan.K <ryankung@ieee.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
swc = { git="https://github.com/swc-project/swc.git", tag="v1.2.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
